mon nauveau projet

--- a/html/index.html
+++ b/html/index.html
@@ -4,286 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Facebook</title>
-    <style>
-      * {
-        margin: 0;
-        padding: 0;
-        box-sizing: border-box;
-      }
-
-      body {
-        font-family: Segoe UI, Tahoma, Geneva, Verdana, sans-serif;
-        background-color: #f0f2f5;
-        color: #050505;
-      }
-
-      header {
-        background-color: #fff;
-        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-        position: sticky;
-        top: 0;
-        z-index: 100;
-      }
-
-      .header-container {
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-        max-width: 1200px;
-        margin: 0 auto;
-        padding: 10px 20px;
-      }
-
-      .logo {
-        font-size: 28px;
-        font-weight: bold;
-        color: #1877f2;
-      }
-
-      .search-box {
-        flex: 1;
-        margin: 0 20px;
-        max-width: 300px;
-      }
-
-      .search-box input {
-        width: 100%;
-        padding: 10px 15px;
-        border: 1px solid #ccc;
-        border-radius: 20px;
-        background-color: #f0f2f5;
-        outline: none;
-      }
-
-      .nav-icons {
-        display: flex;
-        gap: 20px;
-        align-items: center;
-      }
-
-      .nav-icons div {
-        width: 36px;
-        height: 36px;
-        background-color: #f0f2f5;
-        border-radius: 50%;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        cursor: pointer;
-        font-size: 18px;
-      }
-
-      .container {
-        max-width: 1200px;
-        margin: 20px auto;
-        display: grid;
-        grid-template-columns: 1fr 2fr 1fr;
-        gap: 20px;
-        padding: 0 20px;
-      }
-
-      .sidebar {
-        background-color: #fff;
-        border-radius: 8px;
-        padding: 0;
-        height: fit-content;
-      }
-
-      .sidebar-item {
-        padding: 12px 16px;
-        cursor: pointer;
-        display: flex;
-        align-items: center;
-        gap: 12px;
-        font-size: 14px;
-        border-bottom: 1px solid #e5e5e5;
-      }
-
-      .sidebar-item:hover {
-        background-color: #f0f2f5;
-      }
-
-      .sidebar-item:last-child {
-        border-bottom: none;
-      }
-
-      .main-feed {
-        display: flex;
-        flex-direction: column;
-        gap: 20px;
-      }
-
-      .create-post {
-        background-color: #fff;
-        border-radius: 8px;
-        padding: 16px;
-        box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
-      }
-
-      .create-post-input {
-        display: flex;
-        gap: 12px;
-        align-items: center;
-        margin-bottom: 12px;
-      }
-
-      .profile-pic {
-        width: 40px;
-        height: 40px;
-        background-color: #e4e6eb;
-        border-radius: 50%;
-      }
-
-      .post-input-field {
-        flex: 1;
-        padding: 12px 16px;
-        background-color: #f0f2f5;
-        border: none;
-        border-radius: 20px;
-        outline: none;
-        cursor: pointer;
-        color: #65676b;
-      }
-
-      .post-actions {
-        display: flex;
-        gap: 12px;
-        padding-top: 12px;
-        border-top: 1px solid #e5e5e5;
-      }
-
-      .post-action {
-        flex: 1;
-        padding: 8px;
-        text-align: center;
-        cursor: pointer;
-        border-radius: 4px;
-        font-size: 14px;
-        color: #65676b;
-      }
-
-      .post-action:hover {
-        background-color: #f0f2f5;
-      }
-
-      .post {
-        background-color: #fff;
-        border-radius: 8px;
-        box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
-        overflow: hidden;
-      }
-
-      .post-header {
-        padding: 12px 16px;
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        border-bottom: 1px solid #e5e5e5;
-      }
-
-      .post-author {
-        display: flex;
-        gap: 12px;
-        align-items: center;
-      }
-
-      .post-author-info {
-        display: flex;
-        flex-direction: column;
-      }
-
-      .post-author-name {
-        font-weight: 600;
-        font-size: 14px;
-      }
-
-      .post-time {
-        font-size: 12px;
-        color: #65676b;
-      }
-
-      .post-content {
-        padding: 12px 16px;
-        font-size: 15px;
-        line-height: 1.5;
-      }
-
-      .post-image {
-        width: 100%;
-        max-height: 500px;
-        object-fit: cover;
-      }
-
-      .post-footer {
-        padding: 12px 16px;
-        border-top: 1px solid #e5e5e5;
-        display: flex;
-        justify-content: space-around;
-        font-size: 14px;
-        color: #65676b;
-      }
-
-      .post-stat {
-        cursor: pointer;
-        padding: 8px 12px;
-        border-radius: 4px;
-      }
-
-      .post-stat:hover {
-        background-color: #f0f2f5;
-      }
-
-      .right-sidebar {
-        background-color: #fff;
-        border-radius: 8px;
-        padding: 16px;
-        height: fit-content;
-      }
-
-      .section-title {
-        font-weight: 600;
-        font-size: 14px;
-        margin-bottom: 12px;
-        color: #65676b;
-      }
-
-      .friend-item {
-        display: flex;
-        align-items: center;
-        gap: 12px;
-        padding: 8px 0;
-        border-bottom: 1px solid #e5e5e5;
-        font-size: 14px;
-        cursor: pointer;
-      }
-
-      .friend-item:last-child {
-        border-bottom: none;
-      }
-
-      .friend-pic {
-        width: 32px;
-        height: 32px;
-        background-color: #e4e6eb;
-        border-radius: 50%;
-      }
-
-      .friend-name {
-        flex: 1;
-        color: #0a66c2;
-      }
-
-      @media (max-width: 1024px) {
-        .container {
-          grid-template-columns: 1fr;
-        }
-
-        .sidebar,
-        .right-sidebar {
-          display: none;
-        }
-      }
-    </style>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <!-- Header -->
